Fixed overflow of drag

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,13 +63,13 @@ body {
     border-radius: 50%;
     background: #1ed760;
     box-shadow: 0px 5px 6px 2px rgba(0, 0, 0, 0.4);
-    visibility: hidden;
-    transition: bottom 0.2s ease-in-out, visibility 0.1s ease-in-out;
+    opacity: 0;
+    transition: bottom 0.2s ease-in-out, opacity 0.2s ease-in-out;
 }
 
 .cardBody:hover .cardPlayButton {
     bottom: 27px;
-    visibility: visible;
+    opacity: 1;
 }
 
 .cardPlayIcon {
@@ -182,7 +182,7 @@ body {
 
 .volumeIcon {
     position: absolute;
-    right: 160px;
+    right: 155px;
     bottom: 30px;
 }
 
@@ -252,6 +252,7 @@ body {
     visibility: hidden;
     z-index: 2;
     margin-top: -3.5px;
+    margin-right: -6px;
 }
 
 #playProgressBar:hover .playProgress {
